--- a/src/i18n/locales/sv/dashboard.json
+++ b/src/i18n/locales/sv/dashboard.json
@@ -3,7 +3,8 @@
   "subtitle": "Skapa och hantera dina årsplaneringar",
   "myWheels": "Mina hjul",
   "teamWheels": "Team hjul",
-  "createWheel": "Skapa nytt hjul",
+  "createWheel": "Skapa nytt årshjul",
+  "createWheelSubtitle": "Börja planera ditt år",
   "loading": "Laddar hjul...",
   "error": "Kunde inte ladda hjul",
   "wheelCount": "{{count}} / {{max}} hjul",
