--- a/src/i18n/locales/en/dashboard.json
+++ b/src/i18n/locales/en/dashboard.json
@@ -3,7 +3,8 @@
   "subtitle": "Create and manage your annual planning",
   "myWheels": "My Wheels",
   "teamWheels": "Team Wheels",
-  "createWheel": "Create New Wheel",
+  "createWheel": "Create New Year Wheel",
+  "createWheelSubtitle": "Start planning your year",
   "loading": "Loading wheels...",
   "error": "Could not load wheels",
   "wheelCount": "{{count}} / {{max}} wheels",
