feat: i18n - LandingPage migration complete

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -10,5 +10,11 @@
   "createAccount": "Create account",
   "resetPassword": "Reset password",
   "sendResetLink": "Send reset link",
-  "backToSignIn": "Back to sign in"
+  "backToSignIn": "Back to sign in",
+  "login": {
+    "welcomeBack": "Welcome back!"
+  },
+  "signup": {
+    "noCreditCard": "Get started right away – no credit card required"
+  }
 }
