--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -10,5 +10,11 @@
   "createAccount": "Skapa konto",
   "resetPassword": "Återställ lösenord",
   "sendResetLink": "Skicka återställningslänk",
-  "backToSignIn": "Tillbaka till inloggning"
+  "backToSignIn": "Tillbaka till inloggning",
+  "login": {
+    "welcomeBack": "Välkommen tillbaka!"
+  },
+  "signup": {
+    "noCreditCard": "Kom igång direkt – ingen kreditkort behövs"
+  }
 }
