feat: i18n - auth forms migration (LoginForm, SignupForm)

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -12,9 +12,31 @@
   "sendResetLink": "Send reset link",
   "backToSignIn": "Back to sign in",
   "login": {
-    "welcomeBack": "Welcome back!"
+    "title": "Welcome back",
+    "subtitle": "Sign in to continue with your wheels",
+    "button": "Sign in",
+    "loading": "Signing in...",
+    "orContinueWith": "or continue with",
+    "google": "Google",
+    "noAccount": "No account? Sign up"
   },
   "signup": {
-    "noCreditCard": "Get started right away – no credit card required"
+    "title": "Create account",
+    "confirmPassword": "Confirm password",
+    "button": "Create free account",
+    "loading": "Creating account...",
+    "orContinueWith": "or continue with",
+    "google": "Google",
+    "hasAccount": "Already have an account? Sign in",
+    "success": {
+      "title": "Account created!",
+      "emailTitle": "Confirm your email",
+      "emailMessage": "We've sent you a confirmation email. Click the link in the email to activate your account.",
+      "goToLogin": "Go to sign in"
+    },
+    "errors": {
+      "passwordMismatch": "Passwords don't match",
+      "passwordTooShort": "Password must be at least 6 characters"
+    }
   }
 }
