--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -12,9 +12,31 @@
   "sendResetLink": "Skicka återställningslänk",
   "backToSignIn": "Tillbaka till inloggning",
   "login": {
-    "welcomeBack": "Välkommen tillbaka!"
+    "title": "Välkommen tillbaka",
+    "subtitle": "Logga in för att fortsätta med dina hjul",
+    "button": "Logga in",
+    "loading": "Loggar in...",
+    "orContinueWith": "eller fortsätt med",
+    "google": "Google",
+    "noAccount": "Inget konto? Registrera dig"
   },
   "signup": {
-    "noCreditCard": "Kom igång direkt – ingen kreditkort behövs"
+    "title": "Skapa konto",
+    "confirmPassword": "Bekräfta lösenord",
+    "button": "Skapa gratis konto",
+    "loading": "Skapar konto...",
+    "orContinueWith": "eller fortsätt med",
+    "google": "Google",
+    "hasAccount": "Har du redan ett konto? Logga in",
+    "success": {
+      "title": "Konto skapat!",
+      "emailTitle": "Bekräfta din e-post",
+      "emailMessage": "Vi har skickat ett bekräftelsemail till dig. Klicka på länken i mailet för att aktivera ditt konto.",
+      "goToLogin": "Gå till inloggning"
+    },
+    "errors": {
+      "passwordMismatch": "Lösenorden matchar inte",
+      "passwordTooShort": "Lösenordet måste vara minst 6 tecken"
+    }
   }
 }
