feat: i18n - ItemTooltip migration

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -98,6 +98,17 @@
     "toggleActivityVisibility": "Toggle activity visibility",
     "change": "Change organization data"
   },
+  "itemTooltip": {
+    "ring": "Ring",
+    "activity": "Activity",
+    "label": "Label",
+    "start": "Start",
+    "end": "End",
+    "time": "Time",
+    "edit": "Edit",
+    "delete": "Delete",
+    "deleteConfirm": "Delete \"{name}\"?"
+  },
   "modal": {
     "addActivity": "Add Activity",
     "editActivity": "Edit Activity",
